--- a/package.json
+++ b/package.json
@@ -21,19 +21,18 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
     "test:e2e": "jest --config jest-e2e.config.ts",
     "test:e2e:watch": "jest --config jest-e2e.config.ts --watch",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.5",
+    "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.5",
-    "@nestjs/platform-express": "^10.0.5",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/platform-express": "^10.1.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.9.2",
@@ -41,37 +40,39 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/types": "^17.4.4",
-    "@golevelup/ts-jest": "^0.3.8",
-    "@nestjs/cli": "^10.1.8",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.5",
+    "@nestjs/cli": "^10.1.12",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.1.3",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.75",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.3",
-    "@types/node": "20.4.1",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
+    "@types/node": "20.5.1",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-nestjs": "^1.2.3",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-sonarjs": "^0.19.0",
-    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-sonarjs": "^0.20.0",
+    "eslint-plugin-unicorn": "^48.0.1",
     "husky": "^8.0.3",
-    "jest": "29.6.1",
-    "lint-staged": "^13.2.3",
-    "pactum": "3.4.1",
-    "prettier": "^3.0.0",
+    "lint-staged": "^14.0.0",
+    "pactum": "3.5.0",
+    "prettier": "^3.0.2",
     "source-map-support": "^0.5.21",
-    "ts-jest": "29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "unplugin-swc": "1.3.2",
+    "vitest": "0.34.2",
+    "vitest-mock-extended": "1.2.0"
   }
 }
