--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,11 @@
     "*.ts": "$(capture).js, $(capture).*.ts, $(capture).*.js",
     "*.js": "$(capture).js.map, $(capture).*.ts, $(capture).*.js",
     "tsconfig.json": "tsconfig.*.json",
-    "Dockerfile": "docker-compose.yml, docker-compose.*.yml, .dockerignore",
-    ".prettierrc": ".prettierignore",
-    "jest.config.ts": "jest-e2e.config.ts",
-    ".env": ".env.*",
-    "package.json": ".npmrc, yarn.lock, .yarnrc, .nvmrc"
+    "Dockerfile": "docker-compose.yml, .dockerignore",
+    ".env": "*.env",
+    "package.json": ".npmrc, yarn.lock, .yarnrc, .nvmrc",
+    ".eslintrc.*": ".eslintignore, .eslintcache",
+    ".prettierrc": ".prettierignore"
   },
   "javascript.updateImportsOnFileMove.enabled": "always",
   "typescript.updateImportsOnFileMove.enabled": "always",
