--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,10 +104,7 @@ jobs:
         run: yarn
 
       - name: Run unit tests 🧪
-        run: yarn test:coverage --ci --maxWorkers=2 --detectOpenHandles
-
-      - name: Run e2e tests
-        run: yarn test:e2e --ci --maxWorkers=2 --detectOpenHandles
+        run: yarn test:coverage
 
       - name: Collect coverage
         uses: codecov/codecov-action@v3
