--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,10 @@
 PORT=
+
+DATABASE_USERNAME=postgres
+DATABASE_NAME=postgres
+DATABASE_PORT=5432
+DATABASE_PASSWORD=postgres
+# For running locally outside docker container
+DATABASE_HOST=localhost
+# For running inside docker container
+DATABASE_HOST=postgres
